# DisLand

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs-access.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  hotplug.rs  lib.rs  main.rs  settings.rs
src-tauri/src/config/: generator.rs  mod.rs  profile.rs  rollback.rs  validation.rs
src-tauri/src/hyprland/: hyprctl.rs  mod.rs  models.rs  service.rs
src/components/: ApplyBar.tsx  LayoutPresets.tsx  TitleBar.tsx
src/components/canvas/: DisplayCanvas.tsx  MonitorCard.tsx
src/components/panels/: LivePreviewDialog.tsx  ProfilesPanel.tsx  PropertyPanel.tsx  SettingsDialog.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  Misc.tsx  Select.tsx  Slider.tsx  Switch.tsx  Tabs.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: useHotplugWatcher.ts  useTheme.ts  useToast.ts
src/lib/: api.ts  layout.ts  utils.ts
src/store/: useStore.ts
src/types/: index.ts
