[package]
name = "displayset"
version = "0.1.0"
description = "A modern GUI Display Manager for Hyprland"
authors = ["DisplaySet"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "displayset_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
which = "7"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

# Pin to avoid cookie/time semver mismatch in tauri's transitive deps.
cookie = "=0.18.1"
time = "=0.3.36"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

